--- a/content/cn_note/LinuxLearn.Rmd
+++ b/content/cn_note/LinuxLearn.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Linux操作手册"
+title: "Linux与server操作手册"
 author: "刘伟"
-date: '2021-03-02'
+date: '2021-12-29'
 layout: post
 showtoc: true
 tags: ["Linux", "PBS psub", "R", "conda", "module"]
