--- a/content/cn_note/SpacerangerLearn.Rmd
+++ b/content/cn_note/SpacerangerLearn.Rmd
@@ -1,8 +1,21 @@
 ---
-title: "Spaceranger操作手册"
+title: "基因组学的基础知识以及R语言"
 author: "刘伟"
-date: '2021-03-02'
+date: '2021-12-29'
 ---
+
+### 基因ID的转化
+这里介绍如何将gene symbol ID转化为ENSEMBL ID。这里的geneset属于人类基因，所以选择*org.Hs.eg.db*数据库包，如果是其他物种，需要选择其他数据库包。keytype指当前gene ID，column是指需要转化成的基因ID。
+```{Rmd}
+geneset <- c('AQP4', 'HPCAL1', 'FREM3', 'TRABD2A', 'KRT17',
+  'FABP7' , 'ADCYAP1' ,'PVALB',
+  'CCK' ,'ENC1','CUX2','RORB','NTNG2',
+  'MBP','PCP4',
+  "SNAP25", "MOBP")
+library("org.Hs.eg.db") # remember to install it if you don't have it already
+symbols <- mapIds(org.Hs.eg.db, keys = geneset, 
+                  keytype = "SYMBOL", column="ENSEMBL")
+```
 
 ### spaceranger
 对于10X空间转录组数据而言，可以使用官方软件space ranger对原始数据进行处理。
@@ -44,6 +57,9 @@ spaceranger count --id=CRC33  \--transcriptome=/nas/yangyi2/CRC/refdata-gex-GRCh
 # sample是指根据FASTQ文件名所得到的样本名称
 ```
 
+spaceRanger的输出详细信息：
+https://support.10xgenomics.com/spatial-gene-expression/software/pipelines/latest/output/overview
+
 
 ### Seraut包
 学习网址见：
@@ -78,4 +94,17 @@ https://satijalab.org/seurat/articles/pbmc3k_tutorial.html
 
 细胞核是细胞内遗传信息的储存、复制和转录的主要场所。大多呈球形或椭圆形。通常一个,也有两个或多个的。借双层多孔的核膜与细胞质分隔。核内含有核液、染色质(或染色体)和核仁
 
+### 转录
+RNA是在细胞核中，以DNA的一条链为模板合成的，这一过程称为转录。当细胞开始合成某种蛋白质时，编码这个蛋白质的一段DNA双链将解开，双链的碱基得以暴露。细胞中游离的核糖核苷酸(RNA)与供转录用的DNA的一条链上的碱基互补配对，在RNA聚合酶作用下，依次连接，形成一个mRNA分子。RNA聚合酶能旋解DNA双链。
 
+cDNA（互补DNA）是指具有与某RNA链呈互补碱基序列的单链DNA。与RNA链互补的单链DNA，以其RNA为模板，在适当引物的存在下，由依赖RNA的DNA聚合酶（反转录酶）作用而合成，并且在合成单链cDNA后，再用碱处理除去与其对应的RNA以后，以单链cDNA为模板，由依赖DNA的DNA聚合酶或依赖RNA的DNA聚合酶作用合成双链cDNA。在这种情况下，mRNA的cDNA，与原来的基因组DNA相同而且无内含子
+
+基因长度一般以bp为单位，即base pair碱基对。
+
+内含子（Intron）又称间隔顺序，指一个基因或mRNA分子中无编码作用的片段 [1]  。内含子是一段特殊的DNA序列
+RNA-Seq技术利用新一代高通量测序平台对基因组cDNA测序，通过统计相关Reads（用于测序的cDNA小片段）数计算出不同mRNA的表达量，
+分析转录本的结构和表达水平，同时发现未知转录本和稀有转录本，精确地识别可变剪切位点以及编码序列单核苷酸多态性，提供最全面的转录组信息。
+
+### Foldchange
+Fold Change定义：
+https://www.cnblogs.com/leezx/p/7132099.html
