--- a/content/cn_note/R_other_note.Rmd
+++ b/content/cn_note/R_other_note.Rmd
@@ -1,44 +1,73 @@
 ---
-title: "R语言零碎笔记"
+title: "R语言生信笔记"
 author: "刘伟"
 date: '2021-04-12'
 output: pdf_document
 ---
   
-  ## Table of Content {#toc}
+## Table of Content{#toc}
   
-  * [普通plot绘图](#ordiPlot)
-  * [ggplot绘图](#ggplot)
-  * [Work on scale of  axis](#yscale)
+  * [R向xlsx中输出多个sheets](#ordiPlot)
+  * [差异表达基因画HeatMap](#ggplot)
+  * [基因symbols和ENSEMBL等ID转化](#yscale)
   * [Work on layout](#layout)
           
-## R向xlsx中输出多个sheets
+## R向xlsx中输出多个sheets{#ordiPlot}
 直接稍微修改下面的code即可，方便快捷。注意输入sheet前数据务必先转化为data frame格式。
-```{Rmd}
+```{r}
 for(i in 1:9){
-  geneName <- row.names(FClist[[i]])
-  dat <- cbind(PvalList[[i]][geneName,], FClist[[i]][,1])
-  dat <- dat[order(dat[,2]),]
+  dat <- matrix(rnorm(50*4), 50, 4)
   dat <- as.data.frame(dat)
-  colnames(dat) <- paste0(cellnames[i], c('t value',' Pr(>|t|)',' FDR',' avg_log2FC') )
-  xlsx::write.xlsx(dat, file='CITE-Seq//DEGs.xlsx', sheetName = paste0('sheet', i), append = T)
+  colnames(dat) <- c('t value',' Pr(>|t|)',' FDR',' avg_log2FC')
+  # xlsx::write.xlsx(dat, file='DEGs.xlsx', sheetName = paste0('sheet', i), append = T)
 }
 ```
 
-## 快速选择前n个差异表达基因的信息
+## 快速选择前n个差异表达基因的信息并画HeatMap{#ggplot}
 
-```{Rmd}
+```{r}
  ## DEG analysis based on the annotated labels
-  seu <- CreateSeuratObject(counts=datList$counts)
+  # install.packages('DR.SC')
+  suppressPackageStartupMessages(library(DR.SC)  )
+  seu <- gendata_RNAExp(height=20, width=20,p=200, K=4)
+  library(Seurat)
   # standard log-normalization
   seu <- NormalizeData(seu)
   seu <- ScaleData(seu)
-  Idents(seu) <- factor(y)
+  Idents(seu) <- factor(seu$true_clusters)
   dat <- FindAllMarkers(seu)
-  library(dplyr)
-  # Efna5,Otx2 ,Wnt2b,Wnt3a,Hes3
+  
+  suppressPackageStartupMessages(library(dplyr) )
   dat %>%
     group_by(cluster) %>%
     top_n(n = 10, wt = avg_log2FC) -> top10
-  markerList_true[[i]] <- top10
+  seus <- subset(seu, downsample = 300)
+## HeatMap
+library(ggplot2)
+p <- DoHeatmap(seus, features = top10$gene, label = F) + 
+  theme(legend.text = element_text(size=16),
+        legend.title = element_text(size=18, face='bold'),
+        axis.text.y = element_text(size=14)) +
+  guides(shape = guide_legend(override.aes = list(size=4)))#+ NoLegend()
+p
+# ggsave(filename = 'heatMap_Brain1.pdf', plot = p,
+#        width = 12.5, height = 7, units = "in", dpi = 1000)
+```
+
+## 基因symbols和ENSEMBL等ID的相互转化{#yscale}
+```{r}
+## 1. transfor Human gene symbols to Ensembl
+geneset <- c('AQP4', 'HPCAL1', 'FREM3', 'TRABD2A', 'KRT17',
+    'FABP7' , 'ADCYAP1' ,'PVALB',
+    'CCK' ,'ENC1','CUX2','RORB','NTNG2','MBP','PCP4',"SNAP25", "MOBP")
+suppressPackageStartupMessages(library("org.Hs.eg.db") )
+# remember to install it if you don't have it already
+Ensembl <- mapIds(org.Hs.eg.db, keys = geneset, 
+                    keytype = "SYMBOL", column="ENSEMBL")
+cat(Ensembl[1:4], '\n')
+
+# 2. transfor Human gene Ensembl to symbols
+Symbol <- mapIds(org.Hs.eg.db, keys = Ensembl, 
+                    keytype = "ENSEMBL", column="SYMBOL")
+cat(Symbol[1:4], '\n')
 ```
