--- a/content/research/2020-12-27-Formula.Rmd
+++ b/content/research/2020-12-27-Formula.Rmd
@@ -36,6 +36,12 @@ for more details.
 4) The complexity of Singular value decomposition of $A$ is $O(mn^2)$ if $A \in R^{m\times n}$, where $n\geq m$.
 
 5) The complexity of QR decomposition of  $A$ is $O(\min(mn^2,nm^2))$ if $A \in R^{m\times n}$.
+##  计算矩阵占用多少运行内存的公式
+1. 在64位计算机中，一个double-precision scaler占用64-bit，也就是8个Bytes. 但是，在C++中the size of long double is 128-bit，这个long double类型的大小是普通double类型的2倍。
+
+2. bit与byte的区别 一字节等于8位,即1B=8b。 在书写单位时一定要注意B字母的大小写和含义。MByte含义是“兆字节”,Mbit的含义是“兆比特”。1KByte=1024Byte, 1MB=1024KB
+
+3. For back-of-the envelope computations I use the simpler formula: an r x c matrix double-precision matrix requires r*c*8/10^9 gigabytes(GB) of RAM.
 
 ## Stirling's Formula
 This formula transfers the factorial term into a polynomial term.
